--- a/src/style/VerticalLayout.css
+++ b/src/style/VerticalLayout.css
@@ -1,6 +1,7 @@
 .vertical-content {
     width: 144px;
-    border: 1px solid #89c2f7;
+    border-right: 2px solid #eeeff0;
+    box-shadow: -8px 8px 8px rgba(0, 21, 41, .08);
 }
 
 .vertical-logo {
@@ -9,7 +10,103 @@
 }
 
 .icon-setting-vertical {
-    font-size: 50px;
-    margin: 20px 0;
+    font-size: 30px;
+    margin: 15px 80px 15px 0;
     animation: rotate 2s linear infinite;
+    color: #101010;
+}
+
+.vertical-content-wrappers {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.vertical-content-wrapper {
+    box-sizing: border-box;
+    width: 128px;
+    height: 40px;
+    margin-top: 10px;
+    position: relative;
+
+
+}
+
+.vertical-content-wrapper a {
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: #8c99aa;
+    text-decoration: none;
+
+}
+
+.vertical-content-wrapper a span {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    width: 93px;
+    margin-left: 31px;
+
+}
+
+
+.vertical-icon {
+    position: absolute;
+    margin-right: 10px;
+    left: 7px;
+}
+
+.active {
+    background-color: #1837ff;
+
+}
+
+.active span {
+    color: #ffff;
+}
+
+.active .vertical-icon {
+    color: #ffff;
+}
+
+.vertical-account {
+    position: absolute;
+    bottom: 20px;
+    width: 144px;
+    height: 150px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.vertical-account span {
+    margin-left: 5px;
+}
+
+.vertical-message,
+.user-account {
+    display: flex;
+    align-items: center;
+}
+
+.icon-message,
+.icon-user {
+    margin-left: 20px;
+    font-size: 24px;
+    color: #5d5b5b;
+}
+
+.user-account {
+    margin-top: 20px;
+}
+
+.icon-user {
+    color: #8c99aa
 }
