--- a/src/style/TacheModal.css
+++ b/src/style/TacheModal.css
@@ -17,7 +17,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
+    width: 1280px;
     height: 83%;
     background-color: #ffff;
     border-radius: 2px;
@@ -115,6 +115,32 @@
 .modal_content-left {
     margin-left: 25px;
     width: 70%;
+    height: 600px;
+    overflow: auto;
+}
+
+/* MultiLineInput.css */
+
+.multi-line-input-container {
+    width: 688px;
+    position: absolute;
+    top: 69%;
+}
+
+.multi-line-input {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    resize: none;
+    outline: none;
+}
+
+.multi-line-input::placeholder {
+    /* Style for the placeholder */
+    color: #999;
 }
 
 .modal_content-left h2 {
@@ -215,9 +241,11 @@ button:disabled {
 .info-box {
     display: flex;
     flex-direction: column;
-    height: 58px;
+    height: 53px;
     justify-content: space-between;
     margin-top: 10px;
+    padding: 2px 0px;
+    margin-bottom: 20px;
 
 }
 
@@ -233,4 +261,38 @@ button:disabled {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr)
+}
+
+.noteBox-button {
+    color: #1f2c40;
+}
+
+.noteBox-input input {
+    width: 100%;
+    height: 250px;
+}
+
+.multi-line-input-buttons {
+    text-align: right;
+}
+
+.btn-cancle {
+    border: none;
+}
+
+.btn-add {
+    background-color: #0080ff;
+    color: #ffff;
+    border: none;
+}
+
+.modal_all {
+    display: flex;
+}
+
+.modal_content-right {
+    width: 40%;
+    height: 600px;
+    overflow: auto;
+    border-left: 1px solid rgb(233, 227, 227)
 }
