--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,6 +1,8 @@
 .header-app {
+    display: flex;
     width: 1278px;
     height: 56px;
+    align-items: center;
 }
 
 .main-app {
@@ -226,7 +228,7 @@
 
 .vide-notification {
     width: 100%;
-    height: 507px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -234,13 +236,17 @@
 
 .note-container {
     border-bottom: 1px solid rgb(233, 227, 227);
-    padding: 10px 0 0 0;
+    padding: 10px 0;
     margin: 0 18px;
 }
 
 .note-content {
     display: flex;
     align-items: center;
+}
+
+.note-content:hover {
+    background-color: #eee;
 }
 
 .icon-note-user {
@@ -282,7 +288,8 @@
 }
 
 .note-time-name {
-    padding-bottom: 10px;
+    display: flex;
+    align-items: center;
     font-size: 12px !important;
 }
 
